# business-idea-refiner-daily

./: .env.example  .gcloudignore  .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 00_getting_started.ipynb  README.md
scripts/: verify_setup.py
src/agents/: __init__.py  example.py  idea_refiner.py
src/agents/idea_refiner/: __init__.py  config.py  main.py
src/agents/idea_refiner/generation/: clients.py  gemini.py  gpt52.py  models.py  prompt.py  runner.py
src/agents/idea_refiner/judging/: judge.py  quality_gate.py
src/agents/idea_refiner/output/: console.py  display.py  telegram.py
src/agents/idea_refiner/pipeline/: accept.py  generate_step.py  judge_step.py  retry.py  run_round.py  state.py  verdict.py
tests/: conftest.py  helpers.py  test_config.py  test_example.py  test_generation.py  test_judging.py  test_main.py  test_output.py  test_pipeline.py
