[project]
name = "idea-refiner"
version = "0.1.0"
description = "AI-powered micro-SaaS idea generator — multi-model brainstorming pipeline that generates, judges, and refines business ideas until they're worth building"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.17.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.6",
]

[project.scripts]
idea-refiner = "agents.idea_refiner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
gcf = ["functions-framework>=3.0"]

[dependency-groups]
dev = [
    "functions-framework>=3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
